Refactor: Improves CompetenceCourse domain methods (2) (#230)
Improves CompetenceCourse domain methods
Relates with: #qubIT-Fenix-8962